# gbc_emu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt  main.cpp
apps/: CMakeLists.txt  app.cpp
cpu/: data_types.h  flag.h  register.h
cpu/inc/: CPU.h  data_types.h  flags.h  instruction.h  opcodes.h  register.h
cpu/src/: CPU.cpp  data_types.cpp
file_handler/: cartridge.cpp  cartridge.h
file_handler/cartridge_types/: mbc_five.h  mbc_one.h  mbc_two.h  rom_only.h
file_handler/cartridge_types/inc/: mbc_three.h
file_handler/cartridges/inc/: mbc_five.h  mbc_one.h  mbc_three.h  mbc_two.h  rom_only.h
file_handler/cartridges/src/: rom_only.cpp
memory/: RAM.h  ROM.h  map.h  video_RAM.h
memory/addresses/: gb_mem_block_sizes.h
memory/blocks/: ROM_bank_0.h  input_output.h  memory_block.h  working_RAM.h
memory/blocks/inc/: ROM_bank_0.h  ROM_bank_n.h  echo_RAM.h  external_RAM.h  high_RAM.h  input_output.h  memory_block.h  sprite_info.h  video_RAM.h  working_RAM.h
memory/maps/: gb_map.cpp  gb_map.h  map.h
tests/: CMakeLists.txt  read_rom_file.cpp
video/: screen_buffer.h  window.h
